# spanel-fastapi

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
backend/: .env.example  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  README.md  main.py  pyproject.toml  test_auth.py  test_phase3.py  test_phase5.py  test_phase6.py
backend/app/api/: __init__.py
backend/app/api/v0/: health.py
backend/app/api/v0/admin/: __init__.py  nodes.py  users.py
backend/app/api/v0/auth/: __init__.py  login.py  logout.py  register.py
backend/app/api/v0/link/: __init__.py  subscription.py
backend/app/api/v0/node/: __init__.py  webapi.py
backend/app/api/v0/payment/: __init__.py  payment.py
backend/app/api/v0/user/: __init__.py  checkin.py  info.py  nodes.py  shop.py
backend/app/core/: config.py  deps.py  scheduler.py  security.py
backend/app/db/: redis.py  session.py
backend/app/models/: link.py  node.py  paylist.py  shop.py  ticket.py  traffic_log.py  user.py
backend/app/schemas/: admin.py  auth.py  response.py  user.py
backend/app/services/: auth_service.py  payment_service.py  shop_service.py  subscribe_service.py  tasks.py
backend/app/utils/: node_utils.py
docs/: PHASE5_IMPLEMENTATION.md  PHASE5_QUICK_REF.md  PHASE5_SUMMARY.md  PHASE6_QUICK_REF.md  PHASE6_SUMMARY.md  api_spec_original.md  original_cron_logic.md  ui_migration_guide.md
frontend/: package-lock.json  package.json  tailwind.config.js
playwright-report/: index.html
tests/: debug-console.spec.ts  diagnostic_logs.json  diagnostic_test.js  (+16 more)
(+49 files in other folders)
